# owl_patch

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  dump.asm  owl_patch.code-workspace  run.sh  rust-toolchain.toml  tables.c
.cargo/: config.toml
.github/workflows/: rust.yml
c_src/: tables.c
examples/: Cargo.toml  Dockerfile  fundsp.rs  midi.rs  minimal.rs  parameters.rs  run.sh  volts_per_octave.rs
examples/.cargo/: config.toml
examples/resources/: AmenBreak.raw
examples/src/: lib.rs  resynth.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: fastmaths.rs  ffi.rs  fft.rs  heap.rs  interpolation.rs  lib.rs  midi_message.rs  resource.rs  sample_buffer.rs  screen_buffer.rs  test_harness.rs  volts_per_octave.rs
src/fft/: cmsis.rs  microfft.rs
src/program_vector/: audio.rs  fft.rs  messages.rs  meta.rs  midi.rs  mod.rs  parameters.rs  resources.rs  screen.rs  service_call.rs
src/sample_buffer/: container.rs  convert.rs  frame.rs  storage.rs
