[package]
name = "owl_patch"
version = "0.1.0"
edition = "2021"
authors = ["orukusaki"]

[dependencies]
num = {version = "0.4", default-features = false}
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false,  features = ["libm"]}
talc = {version = "4.4.1", features = ["counters"], optional = true}
spin = "0.9.8"
owl_patch_macros = {path = "./macros"}

[build-dependencies]
bindgen = "0.65.1"

[features]
default = ["talc"]
talc = ["dep:talc"]