[package]
name = "owl_patch"
description = "Rust SDK for Rebel Technology Owl2/3 devices"
version = "0.1.1"
edition = "2021"
authors = ["Peter Smith <peter@orukusaki.co.uk>"]
license = "MIT OR Apache-2.0"
keywords = ["dsp", "embedded", "synthesizer", "audio", "owl"]
categories = ["multimedia::audio", "no-std", "embedded"]
repository = "https://github.com/orukusaki/owl_patch"

[dependencies]
num = {version = "0.4", default-features = false}
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false,  features = ["libm"]}
talc = {version = "4.4.1", features = ["counters"], optional = true}
spin = "0.9.8"
owl_patch_macros = {version = "0.1.0", git = "https://github.com/orukusaki/owl_patch"}

[build-dependencies]
bindgen = {version = "0.70.1"}
cc = "1.1.30"

[features]
default = ["talc", "vpo_fastmaths"]
talc = ["dep:talc"]
fastmaths = []
vpo_fastmaths = ["fastmaths"]

[dev-dependencies]
ctor = "0.2.8"
