[package]
name = "owl_patch"
description = "Rust SDK for Rebel Technology Owl2/3 devices"
version = "0.7.0"
edition = "2021"
authors = ["Peter Smith <peter@orukusaki.co.uk>"]
license = "MIT OR Apache-2.0"
keywords = ["dsp", "embedded", "synthesizer", "audio", "owl"]
categories = ["multimedia::audio", "no-std", "embedded"]
repository = "https://github.com/orukusaki/owl_patch"

[dependencies]
num = {version = "0.4", default-features = false}
num-derive = "0.4.2"
num-traits = { version = "0.2.19", default-features = false,  features = ["libm"]}
talc = {version = "4.4.1", features = ["counters"], optional = true}
spin = "0.9.8"
owl_patch_macros = "0.1.0"
cfg-if = "1.0.0"
cmsis_dsp_sys_pregenerated = "0.1.0"
embedded-graphics-core = "0.4.0"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"], optional = true }
lock_api = "0.4.13"

[build-dependencies]
bindgen = {version = "0.70.1"}
cc = "1.1.30"

[features]
default = ["talc", "vpo_fastmaths"]
talc = ["dep:talc", "dep:cortex-m"]
fastmaths = []
vpo_fastmaths = ["fastmaths"]
stack_hack = []

[dev-dependencies]
ctor = "0.2.8"
