[package]
name = "owl_patch_examples"
version = "0.1.0"
edition = "2021"
authors = ["orukusaki"]

[dependencies]
owl_patch = {path = '../'}
fundsp = { version = "0.18.2", default-features = false }
num-traits = { version = "0.2.19", default-features = false,  features = ["libm"]}

[profile.release]
strip = "debuginfo"
codegen-units = 1
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false

[profile.release.package."*"]
strip = "debuginfo"
opt-level = 3
